# PCppMax

./: CMakeLists.txt
pcmax/: main.cpp
pcmax.solution/: Machine.h  TaskManager.cpp  TaskManager.h
pcmax.solution/greedy/: main.cpp
pcmax.solution/heuristic/: main.cpp
pcmax/generator/: InstanceGenerator.cpp  InstanceGenerator.h  main.cpp
pcmax/generator/optimal/: OptimalInstanceGenerator.cpp  OptimalInstanceGenerator.h  main.cpp
pcmax/generator/random/: RandomInstanceGenerator.cpp  RandomInstanceGenerator.h  main.cpp  random_instance_0.txt  random_instance_1.txt
pcmax/instance/: Instance.cpp  Instance.h
pcmax/instance/generator/: Generator.cpp  Generator.h  GeneratorWrapper.cpp  GeneratorWrapper.h
pcmax/instance/generator/optimal/: OptimalGenerator.cpp  OptimalGenerator.h  main.cpp
pcmax/instance/generator/random/: RandomGenerator.cpp  RandomGenerator.h  main.cpp
pcmax/model/: Scheduler.cpp  Scheduler.h  Task.cpp  Task.h  Worker.cpp  Worker.h
pcmax/solution/: Algorithm.h  AlgorithmWrapper.cpp  AlgorithmWrapper.h  Machine.cpp  Machine.h  TaskManager.cpp  TaskManager.h
pcmax/solution/base/: Algorithm.h  AlgorithmWrapper.cpp  AlgorithmWrapper.h  main.cpp
pcmax/solution/brutal/: Algorithm.cpp
pcmax/solution/brute-force/: BruteForceAlgorithm.h  main.cpp
pcmax/solution/genetic/: Algorithm.cpp  GeneticAlgorithm.h  main.cpp
pcmax/solution/genetic/algorithms/first/: FirstGeneticAlgorithm.cpp  FirstGeneticAlgorithm.h  main.cpp
pcmax/solution/greedy/: Algorithm.cpp  GreedyAlgorithm.h  main.cpp
pcmax/solution/heuristic/: Algorithm.cpp  HeuristicAlgorithm.h  main.cpp
pcmax/solution/ltp/: LongestTimeProcessingAlgorithm.h  main.cpp
